feat : création Type pour faciliter la gestion des erreurs + exemples
