# openapi-specs.yaml
@@ -103,6 +103,34 @@ paths:
                   $ref: '#/components/schemas/Post'
         '401':
           $ref: '#/components/responses/UnauthorizedError'
+  /posts/{id}:
+    get:
+      tags:
+        - Posts
+      summary: Get a post by ID
+      description: Returns a single post by ID
+      operationId: getPostById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the post to retrieve
+          schema:
+            type: string
+      security:
+        - 
+          bearerAuth: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+        '404':
+          description: User not found
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
 components:
   securitySchemes:
     bearerAuth:
